Bed image changes

--- a/project1/webapp/view/Bed_Details.view.xml
+++ b/project1/webapp/view/Bed_Details.view.xml
@@ -1,38 +1,22 @@
-<mvc:View
-    controllerName="sap.ui.com.project1.controller.Bed_Details"
+<mvc:View controllerName="sap.ui.com.project1.controller.Bed_Details"
 	xmlns:mvc="sap.ui.core.mvc"
 	xmlns="sap.m"
 	xmlns:m="sap.m"
 	xmlns:c="sap.ui.core"
 	xmlns:fb="sap.ui.comp.filterbar"
 	xmlns:core="sap.ui.core"
-    displayBlock="true"
-    height="100%"
+    displayBlock="true" height="100%"
     busyIndicatorDelay="0">
 	<Page  showHeader="true" >
-	 <headerContent>
-	     <core:Fragment fragmentName="sap.ui.com.project1.fragment.Header" type="XML"/>
+		<headerContent>
+			<core:Fragment fragmentName="sap.ui.com.project1.fragment.Header" type="XML"/>
 		</headerContent>
 		<content>
-			<fb:FilterBar
-                id="BD_id_FilterbarEmployee"
-                persistencyKey="myPersKey"
-                useToolbar="false"
-                clear="PO_onPressClear"
-                showClearOnFB="true"
-                search="Onsearch"
-                filterChange="IA_.onFilterChange"
-                afterVariantLoad="IA_.onAfterVariantLoad"
-                showFilterConfiguration="false"
-                filterContainerWidth="auto"
-            >
+			<fb:FilterBar id="BD_id_FilterbarEmployee" persistencyKey="myPersKey" useToolbar="false" clear="PO_onPressClear"
+                showClearOnFB="true" search="Onsearch" filterChange="IA_.onFilterChange"  afterVariantLoad="IA_.onAfterVariantLoad"
+                showFilterConfiguration="false" filterContainerWidth="auto">
 				<fb:filterGroupItems>
-					<fb:FilterGroupItem
-                        name="Bed Type"
-                        label="Bed Type"
-                        groupName="Group"
-                        visibleInFilterBar="true"
-                    >
+					<fb:FilterGroupItem name="Bed Type" label="Bed Type" groupName="Group" visibleInFilterBar="true">
 						<fb:control>
 							<ComboBox id="PO_id_CustomerName" items="{BedDetails>/}" showClearIcon="true">
 								<core:Item key="{BedDetails>Name}" text="{BedDetails>Name}" />
@@ -41,11 +25,7 @@
 					</fb:FilterGroupItem>
 				</fb:filterGroupItems>
 				<fb:filterGroupItems>
-					<fb:FilterGroupItem
-                        name="Room Type"
-                        label="Room Type"
-                        groupName="Group"
-                        visibleInFilterBar="true">
+					<fb:FilterGroupItem name="Room Type" label="Room Type" groupName="Group" visibleInFilterBar="true">
 						<fb:control>
 							<ComboBox id="PO_id_CompanyName" items="{BedDetails>/}" showClearIcon="true">
 								<core:ListItem  key="{BedDetails>ACType}"  text="{BedDetails>ACType}"/>
@@ -54,13 +34,8 @@
 					</fb:FilterGroupItem>
 				</fb:filterGroupItems>
 			</fb:FilterBar>
-			<Table
-                id="id_BedTable"
-                sticky="ColumnHeaders,HeaderToolbar"
-                mode="MultiSelect"
-                width="auto"
-                busyIndicatorDelay="0"
-                class="sapUiResponsiveMargin"
+			<Table id="id_BedTable" sticky="ColumnHeaders,HeaderToolbar" mode="MultiSelect"
+                width="auto" busyIndicatorDelay="0" class="sapUiResponsiveMargin"
 				items="{path: 'BedDetails>/', sorter: {path: 'BranchCode',descending: false,group: true}}">
 				<headerToolbar>
 					<OverflowToolbar>
@@ -68,11 +43,7 @@
 						<ToolbarSpacer />
 						<Button text="Add Bed" press="HM_RoomDetails" class="myUnifiedBtn"/>
 						<Button text="Delete" press="HM_DeleteDetails" class="myUnifiedBtn"/>
-						  <Button
-                        press="BD_onDownload"
-                        class="myUnifiedBtn"
-                        text="Download"
-                    />
+						<Button text="Download" press="BD_onDownload" class="myUnifiedBtn"/>
 					</OverflowToolbar>
 				</headerToolbar>
 				<columns>
@@ -82,13 +53,13 @@
 					<Column demandPopin="true">
 						<Text text="Room Type"/>
 					</Column>
-						<Column demandPopin="true">
-						<Text text="No Of Rooms"/>
+					<Column demandPopin="true">
+						<Text text="No of Rooms"/>
 					</Column>
-						<Column minScreenWidth="Tablet" demandPopin="true">
-						<Text text="No Of Person"/>
+					<Column minScreenWidth="Tablet" demandPopin="true">
+						<Text text="No of Person"/>
 					</Column>
-						<Column minScreenWidth="Tablet" demandPopin="true">
+					<Column minScreenWidth="Tablet" demandPopin="true">
 						<Text text="Description"/>
 					</Column>
 				</columns>
