--- a/project1/webapp/view/Book_Room.view.xml
+++ b/project1/webapp/view/Book_Room.view.xml
@@ -93,7 +93,7 @@
         >
         
             	<MessageStrip
-				text="Login to prefill traveller details and get access to secret deals"
+				text="Login to prefill personal details and get access to secret deals"
 				showIcon="true"
 				showCloseButton="false"
 				>
