Tile page changes

--- a/project1/webapp/css/style.css
+++ b/project1/webapp/css/style.css
@@ -2057,3 +2057,15 @@ span.sapMBtnInner.sapMBtnEmphasized {
     outline: none;
     text-decoration: none !important;
 }
+
+.tileContainer {
+  justify-content: flex-start;
+}
+
+/* Center Tiles on Small Screens (Mobile) */
+@media screen and (max-width: 768px) {
+  .tileContainer {
+    justify-content: center !important;
+    /* Center align on mobile */
+  }
+}
